--- a/frontend/src/components/style.component/CreateProduct.module.css
+++ b/frontend/src/components/style.component/CreateProduct.module.css
@@ -8,7 +8,7 @@
 }
 
 .createProduct h2 {
-  font-size: 2.2rem;
+  font-size: 32;
   color: #ff0000; /* Chỉnh màu chữ về #ff0000 */
   margin-bottom: 1.5rem;
   text-align: center;
