--- a/frontend/src/components/style.component/ProductManagement.module.css
+++ b/frontend/src/components/style.component/ProductManagement.module.css
@@ -13,7 +13,7 @@
 .productManagement h2 {
   margin-bottom: 20px;
   color: #ff0000;
-  font-size: 1.8rem;
+  font-size: 32;
   text-align: center;
   font-weight: 600;
   
